Fix: Increased top padding to add bigger gap between header and page content

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2365,8 +2365,12 @@ div[data-role=controlgroup] a.ui-btn-active {
     }
 
     .libraryPage:not(.noSecondaryNavPage):not(.layout-tv .libraryPage) {
-        padding-top: 4.8em !important;
+        padding-top: 5.8em !important;
     }
+}
+
+.libraryPage:not(.noSecondaryNavPage) {
+    padding-top: 8.5em !important;
 }
 
 .layout-tv .headerLeft {
